--- a/css/theme/my.css
+++ b/css/theme/my.css
@@ -65,7 +65,7 @@ body {
 .reveal h4,
 .reveal h5,
 .reveal h6 {
-    margin: 0 0 40px 0;
+    margin: 0 0 20px 0;
     color: black;
     font-family: "PT Sans", sans-serif;
     font-weight: bold;
@@ -76,8 +76,14 @@ body {
 }
 
 .reveal h1 {
+    margin: 0 0 40px 0;
     text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2);
 }
+
+.reveal h1 { font-size: 3.77em; }
+.reveal h2 { font-size: 1.60em;	}
+.reveal h3 { font-size: 1.20em;	}
+.reveal h4 { font-size: 0.9em;	}
 
 /*********************************************
  * LINKS
@@ -158,7 +164,7 @@ body {
 }
 
 .reveal .progress span {
-    background: darkblue;
+    background: red;
     -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
     -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
     -ms-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
@@ -168,6 +174,20 @@ body {
 
 .reveal .slides {
     text-align: left;
+}
+
+.reveal pre {
+    box-shadow: none;
+    margin: 0;
+    width: 100%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.reveal pre code {
+    max-height: none;
+    padding: 10px;
 }
 
 p.b-top {
