--- a/css/theme/my.css
+++ b/css/theme/my.css
@@ -44,7 +44,7 @@ body {
 
 .reveal {
     font-family: "PT Sans", sans-serif;
-    font-size: 36px;
+    font-size: 50px;
     font-weight: 200;
     letter-spacing: -0.02em;
     color: black;
@@ -80,7 +80,7 @@ body {
     text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2);
 }
 
-.reveal h1 { font-size: 3.77em; }
+.reveal h1 { font-size: 3.5em; }
 .reveal h2 { font-size: 1.60em;	}
 .reveal h3 { font-size: 1.20em;	}
 .reveal h4 { font-size: 0.9em;	}
@@ -188,6 +188,10 @@ body {
 .reveal pre code {
     max-height: none;
     padding: 10px;
+    font-size: 1.5em !important;
+    line-height: 1.1;
+    font-weight: normal;
+    -webkit-font-smoothing: antialiased;
 }
 
 p.b-top {
@@ -198,3 +202,4 @@ img {
     border: 0 !important;
     box-shadow: none !important;
 }
+
